# Rust-Server

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml
auto_parser/: Cargo.toml  locustfile.py  parser.py
auto_parser/src/: lib.rs  main.rs  updater.rs
chatbot/: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  disel.toml  fleet.toml  locust_test.py
chatbot/.cargo/: config
chatbot/benches/: parse.rs
chatbot/src/: lib.rs  main.rs  service.rs
chatbot/src/db/: connection.rs  connection_mongo.rs  connection_mysql.rs  mod.rs  models.rs  query.rs  schema.rs
chatbot/src/routes/: chatbot.rs  info.rs  mod.rs  notice.rs  route.rs  test.rs  user.rs
chatbot/src/templates/: home.hbs  kakao.html.tera  kakao.js
chatbot/src/templates/components/: alt-screen-header.css  nav-bar.css  no-mobile.css  status-bar.css
chatbot/src/templates/screens/: chat.css
chatbot/src/utils/: harper.rs  mod.rs  parser.rs
chatbot/tests/: k6_test.js  parse_test.rs
src/: lib.rs  main.rs
src/db/: connection.rs  db.rs  mod.rs  models.rs  query.rs  schema.rs
src/kakao_json/: basics.rs  buttons.rs  cards.rs  mod.rs  result.json  test.json
src/routes/: html.rs  mod.rs  notice.rs
src/templates/: ajou.html.tera  home.hbs  home.hbs.json  kakao.css  kakao.html.tera  kakao.js  kakaotalk.css  reset.css  styles.css  test.hbs  variables.css
src/templates/components/: alt-screen-header.css  badge.css  icon-raw.css  nav-bar.css  no-mobile.css  screen-header.css  status-bar.css  user-component.css
src/templates/screens/: chat.css
src/utils/: kakao.rs  mod.rs  parse.rs  parser.rs  result.json  test.json
templates/: a.html  ajou.html.tera  home.hbs  home.hbs.json  kakao.tera
tests/: common.rs  notice.rs  parse.rs
wasm/: Cargo.toml  test.html
wasm/src/: lib.rs
