[package]
name = "rustweb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4", features = ["handlebars_templates", "tera_templates"]}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.126"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "1.4.7", features = ["mysql"] }
dotenv = "0.15.0"
r2d2 = "*"
r2d2-diesel = "*"
scraper = "0.12.0"
chrono = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
