[package]
name = "ajou_notice"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "parser"
path = "src/main.rs"

[[bin]]
name = "updater"
path = "src/updater.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
scraper = "0.12.0"
futures = "0.3"
chrono = "0.4"
chrono-tz = "0.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false