[package]
name = "rustserver"
version = "1.0.0"
edition = "2018"
# build = "build.rs"

[[bench]]
name = "parse"
harness = false

[dependencies]
actix-rt = "2"
actix-http = "2"
actix-web = "4.0.0-beta.9" 
actix-cors = "0.6.0-beta.2"
# handlebars = { version = "4.1.0", features = ["dir_source"] }
# tera = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15.0"
r2d2 = "0.8"
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
scraper = "0.12.0"
chrono = "0.4"
# unicode-segmentation = "1.8.0"
kakao-rs = "0.2.8"
rand = "0.8"
lazy_static = "1.4.0"
# actix-ratelimit = "0.3.1"
mongodb = "2.0.0"
futures = "0.3"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.5", features = ["flamegraph", "criterion"] }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[features]
mysql = []
mongo = []